--- a/notebooks/knn.ipynb
+++ b/notebooks/knn.ipynb
@@ -21,9 +21,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "mkdir: cannot create directory ‘build’: File exists\n",
+      "-- The C compiler identification is GNU 9.3.0\n",
+      "-- The CXX compiler identification is GNU 9.3.0\n",
+      "-- Check for working C compiler: /usr/bin/cc\n",
+      "-- Check for working C compiler: /usr/bin/cc -- works\n",
+      "-- Detecting C compiler ABI info\n",
+      "-- Detecting C compiler ABI info - done\n",
+      "-- Detecting C compile features\n",
+      "-- Detecting C compile features - done\n",
+      "-- Check for working CXX compiler: /usr/bin/c++\n",
+      "-- Check for working CXX compiler: /usr/bin/c++ -- works\n",
+      "-- Detecting CXX compiler ABI info\n",
+      "-- Detecting CXX compiler ABI info - done\n",
+      "-- Detecting CXX compile features\n",
+      "-- Detecting CXX compile features - done\n",
+      "Release mode\n",
+      "-- Found PythonInterp: /home/msorondo/anaconda3/bin/python (found version \"3.8.5\") \n",
+      "-- Found PythonLibs: /home/msorondo/anaconda3/lib/libpython3.8.so\n",
+      "-- pybind11 v2.2.4\n",
+      "-- Performing Test HAS_FLTO\n",
+      "-- Performing Test HAS_FLTO - Success\n",
+      "-- LTO enabled\n",
+      "CMAKE_INSTALL_PREFIX=/home/msorondo/Desktop/Metodos Numericos/metnum-tp2\n",
+      "-- Configuring done\n",
+      "-- Generating done\n",
+      "-- Build files have been written to: /home/msorondo/Desktop/Metodos Numericos/metnum-tp2/build\n",
+      "\u001b[35m\u001b[1mScanning dependencies of target tp2\u001b[0m\n",
+      "[ 10%] \u001b[32mBuilding CXX object CMakeFiles/tp2.dir/src/main.cpp.o\u001b[0m\n",
+      "In file included from \u001b[01m\u001b[K/home/msorondo/Desktop/Metodos Numericos/metnum-tp2/src/main.cpp:7\u001b[m\u001b[K:\n",
+      "\u001b[01m\u001b[K/home/msorondo/Desktop/Metodos Numericos/metnum-tp2/src/eigen.h:26:1:\u001b[m\u001b[K \u001b[01;31m\u001b[Kerror: \u001b[m\u001b[Kexpected initializer before ‘\u001b[01m\u001b[Kstd\u001b[m\u001b[K’\n",
+      "   26 | \u001b[01;31m\u001b[Kstd\u001b[m\u001b[K::pair<double, Vector> power_iteration(const Matrix& mat, unsigned num_iter=5000, double eps=1e-16);\n",
+      "      | \u001b[01;31m\u001b[K^~~\u001b[m\u001b[K\n",
+      "make[2]: *** [CMakeFiles/tp2.dir/build.make:63: CMakeFiles/tp2.dir/src/main.cpp.o] Error 1\n",
+      "make[1]: *** [CMakeFiles/Makefile2:98: CMakeFiles/tp2.dir/all] Error 2\n",
+      "make: *** [Makefile:130: all] Error 2\n"
+     ]
+    }
+   ],
    "source": [
     "!cd .. && mkdir build\n",
     "!cd ../build/ && rm -rf *\n",
@@ -35,9 +77,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "/home/msorondo/Desktop/Metodos Numericos/metnum-tp2/notebooks\n",
+      "Python 3.8.5\n"
+     ]
+    },
+    {
+     "output_type": "error",
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'metnum'",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-13-1b1e0306d4e2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msystem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'pwd'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msystem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'python --version'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mmetnum\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'metnum'"
+     ]
+    }
+   ],
    "source": [
     "# Verifico la correcta instalación. Si no falla el import está OK\n",
     "!pwd\n",
@@ -54,9 +116,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -74,9 +144,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "   label  pixel0  pixel1  pixel2  pixel3  pixel4  pixel5  pixel6  pixel7  \\\n",
+       "0      1       0       0       0       0       0       0       0       0   \n",
+       "1      0       0       0       0       0       0       0       0       0   \n",
+       "2      1       0       0       0       0       0       0       0       0   \n",
+       "3      4       0       0       0       0       0       0       0       0   \n",
+       "4      0       0       0       0       0       0       0       0       0   \n",
+       "5      0       0       0       0       0       0       0       0       0   \n",
+       "6      7       0       0       0       0       0       0       0       0   \n",
+       "7      3       0       0       0       0       0       0       0       0   \n",
+       "8      5       0       0       0       0       0       0       0       0   \n",
+       "9      3       0       0       0       0       0       0       0       0   \n",
+       "\n",
+       "   pixel8  ...  pixel774  pixel775  pixel776  pixel777  pixel778  pixel779  \\\n",
+       "0       0  ...         0         0         0         0         0         0   \n",
+       "1       0  ...         0         0         0         0         0         0   \n",
+       "2       0  ...         0         0         0         0         0         0   \n",
+       "3       0  ...         0         0         0         0         0         0   \n",
+       "4       0  ...         0         0         0         0         0         0   \n",
+       "5       0  ...         0         0         0         0         0         0   \n",
+       "6       0  ...         0         0         0         0         0         0   \n",
+       "7       0  ...         0         0         0         0         0         0   \n",
+       "8       0  ...         0         0         0         0         0         0   \n",
+       "9       0  ...         0         0         0         0         0         0   \n",
+       "\n",
+       "   pixel780  pixel781  pixel782  pixel783  \n",
+       "0         0         0         0         0  \n",
+       "1         0         0         0         0  \n",
+       "2         0         0         0         0  \n",
+       "3         0         0         0         0  \n",
+       "4         0         0         0         0  \n",
+       "5         0         0         0         0  \n",
+       "6         0         0         0         0  \n",
+       "7         0         0         0         0  \n",
+       "8         0         0         0         0  \n",
+       "9         0         0         0         0  \n",
+       "\n",
+       "[10 rows x 785 columns]"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>label</th>\n      <th>pixel0</th>\n      <th>pixel1</th>\n      <th>pixel2</th>\n      <th>pixel3</th>\n      <th>pixel4</th>\n      <th>pixel5</th>\n      <th>pixel6</th>\n      <th>pixel7</th>\n      <th>pixel8</th>\n      <th>...</th>\n      <th>pixel774</th>\n      <th>pixel775</th>\n      <th>pixel776</th>\n      <th>pixel777</th>\n      <th>pixel778</th>\n      <th>pixel779</th>\n      <th>pixel780</th>\n      <th>pixel781</th>\n      <th>pixel782</th>\n      <th>pixel783</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>4</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>7</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>3</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>5</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>3</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n<p>10 rows × 785 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 18
+    }
+   ],
    "source": [
     "df_train[:10]"
    ]
@@ -94,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +365,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
