arreglamos bugs en get_first_eigen.., implementamos criterio de parada. corremos knn con pca y da feo.

--- a/notebooks/knn.ipynb
+++ b/notebooks/knn.ipynb
@@ -21,81 +21,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "mkdir: cannot create directory ‘build’: File exists\n",
-      "-- The C compiler identification is GNU 9.3.0\n",
-      "-- The CXX compiler identification is GNU 9.3.0\n",
-      "-- Check for working C compiler: /usr/bin/cc\n",
-      "-- Check for working C compiler: /usr/bin/cc -- works\n",
-      "-- Detecting C compiler ABI info\n",
-      "-- Detecting C compiler ABI info - done\n",
-      "-- Detecting C compile features\n",
-      "-- Detecting C compile features - done\n",
-      "-- Check for working CXX compiler: /usr/bin/c++\n",
-      "-- Check for working CXX compiler: /usr/bin/c++ -- works\n",
-      "-- Detecting CXX compiler ABI info\n",
-      "-- Detecting CXX compiler ABI info - done\n",
-      "-- Detecting CXX compile features\n",
-      "-- Detecting CXX compile features - done\n",
-      "Release mode\n",
-      "-- Found PythonInterp: /home/patricio/hdd/metnum-tp2/tp2/bin/python (found version \"3.8.5\") \n",
-      "-- Found PythonLibs: /usr/lib/x86_64-linux-gnu/libpython3.8.so\n",
-      "-- pybind11 v2.2.4\n",
-      "-- Performing Test HAS_FLTO\n",
-      "-- Performing Test HAS_FLTO - Success\n",
-      "-- LTO enabled\n",
-      "CMAKE_INSTALL_PREFIX=/home/patricio/hdd/metnum-tp2\n",
-      "-- Configuring done\n",
-      "-- Generating done\n",
-      "-- Build files have been written to: /home/patricio/hdd/metnum-tp2/build\n",
-      "\u001b[35m\u001b[1mScanning dependencies of target tp2\u001b[0m\n",
-      "[ 10%] \u001b[32mBuilding CXX object CMakeFiles/tp2.dir/src/main.cpp.o\u001b[0m\n",
-      "[ 20%] \u001b[32mBuilding CXX object CMakeFiles/tp2.dir/src/knn.cpp.o\u001b[0m\n",
-      "[ 30%] \u001b[32mBuilding CXX object CMakeFiles/tp2.dir/src/pca.cpp.o\u001b[0m\n",
-      "[ 40%] \u001b[32mBuilding CXX object CMakeFiles/tp2.dir/src/eigen.cpp.o\u001b[0m\n",
-      "\u001b[01m\u001b[K/home/patricio/hdd/metnum-tp2/src/eigen.cpp:\u001b[m\u001b[K In function ‘\u001b[01m\u001b[Kstd::pair<double, Eigen::Matrix<double, -1, 1> > power_iteration(const Matrix&, unsigned int, double)\u001b[m\u001b[K’:\n",
-      "\u001b[01m\u001b[K/home/patricio/hdd/metnum-tp2/src/eigen.cpp:13:23:\u001b[m\u001b[K \u001b[01;35m\u001b[Kwarning: \u001b[m\u001b[Kcomparison of integer expressions of different signedness: ‘\u001b[01m\u001b[Kint\u001b[m\u001b[K’ and ‘\u001b[01m\u001b[Kunsigned int\u001b[m\u001b[K’ [\u001b[01;35m\u001b[K-Wsign-compare\u001b[m\u001b[K]\n",
-      "   13 |     for (int i = 0; \u001b[01;35m\u001b[Ki < num_iter\u001b[m\u001b[K; i++) {\n",
-      "      |                     \u001b[01;35m\u001b[K~~^~~~~~~~~~\u001b[m\u001b[K\n",
-      "\u001b[01m\u001b[K/home/patricio/hdd/metnum-tp2/src/eigen.cpp:11:12:\u001b[m\u001b[K \u001b[01;35m\u001b[Kwarning: \u001b[m\u001b[Kunused variable ‘\u001b[01m\u001b[Keigenvalue\u001b[m\u001b[K’ [\u001b[01;35m\u001b[K-Wunused-variable\u001b[m\u001b[K]\n",
-      "   11 |     double \u001b[01;35m\u001b[Keigenvalue\u001b[m\u001b[K;\n",
-      "      |            \u001b[01;35m\u001b[K^~~~~~~~~~\u001b[m\u001b[K\n",
-      "\u001b[01m\u001b[K/home/patricio/hdd/metnum-tp2/src/eigen.cpp:\u001b[m\u001b[K In function ‘\u001b[01m\u001b[Kstd::pair<Eigen::Matrix<double, -1, 1>, Eigen::Matrix<double, -1, -1, 1> > get_first_eigenvalues(const Matrix&, unsigned int, unsigned int, double)\u001b[m\u001b[K’:\n",
-      "\u001b[01m\u001b[K/home/patricio/hdd/metnum-tp2/src/eigen.cpp:29:24:\u001b[m\u001b[K \u001b[01;35m\u001b[Kwarning: \u001b[m\u001b[Kcomparison of integer expressions of different signedness: ‘\u001b[01m\u001b[Kint\u001b[m\u001b[K’ and ‘\u001b[01m\u001b[Kunsigned int\u001b[m\u001b[K’ [\u001b[01;35m\u001b[K-Wsign-compare\u001b[m\u001b[K]\n",
-      "   29 |     for ( int i = 0; \u001b[01;35m\u001b[Ki < num\u001b[m\u001b[K; i++) {\n",
-      "      |                      \u001b[01;35m\u001b[K~~^~~~~\u001b[m\u001b[K\n",
-      "[ 50%] \u001b[32m\u001b[1mLinking CXX executable tp2\u001b[0m\n",
-      "[ 50%] Built target tp2\n",
-      "\u001b[35m\u001b[1mScanning dependencies of target metnum\u001b[0m\n",
-      "[ 60%] \u001b[32mBuilding CXX object CMakeFiles/metnum.dir/src/metnum.cpp.o\u001b[0m\n",
-      "[ 70%] \u001b[32mBuilding CXX object CMakeFiles/metnum.dir/src/knn.cpp.o\u001b[0m\n",
-      "[ 80%] \u001b[32mBuilding CXX object CMakeFiles/metnum.dir/src/pca.cpp.o\u001b[0m\n",
-      "[ 90%] \u001b[32mBuilding CXX object CMakeFiles/metnum.dir/src/eigen.cpp.o\u001b[0m\n",
-      "\u001b[01m\u001b[K/home/patricio/hdd/metnum-tp2/src/eigen.cpp:\u001b[m\u001b[K In function ‘\u001b[01m\u001b[Kstd::pair<double, Eigen::Matrix<double, -1, 1> > power_iteration(const Matrix&, unsigned int, double)\u001b[m\u001b[K’:\n",
-      "\u001b[01m\u001b[K/home/patricio/hdd/metnum-tp2/src/eigen.cpp:13:23:\u001b[m\u001b[K \u001b[01;35m\u001b[Kwarning: \u001b[m\u001b[Kcomparison of integer expressions of different signedness: ‘\u001b[01m\u001b[Kint\u001b[m\u001b[K’ and ‘\u001b[01m\u001b[Kunsigned int\u001b[m\u001b[K’ [\u001b[01;35m\u001b[K-Wsign-compare\u001b[m\u001b[K]\n",
-      "   13 |     for (int i = 0; \u001b[01;35m\u001b[Ki < num_iter\u001b[m\u001b[K; i++) {\n",
-      "      |                     \u001b[01;35m\u001b[K~~^~~~~~~~~~\u001b[m\u001b[K\n",
-      "\u001b[01m\u001b[K/home/patricio/hdd/metnum-tp2/src/eigen.cpp:11:12:\u001b[m\u001b[K \u001b[01;35m\u001b[Kwarning: \u001b[m\u001b[Kunused variable ‘\u001b[01m\u001b[Keigenvalue\u001b[m\u001b[K’ [\u001b[01;35m\u001b[K-Wunused-variable\u001b[m\u001b[K]\n",
-      "   11 |     double \u001b[01;35m\u001b[Keigenvalue\u001b[m\u001b[K;\n",
-      "      |            \u001b[01;35m\u001b[K^~~~~~~~~~\u001b[m\u001b[K\n",
-      "\u001b[01m\u001b[K/home/patricio/hdd/metnum-tp2/src/eigen.cpp:\u001b[m\u001b[K In function ‘\u001b[01m\u001b[Kstd::pair<Eigen::Matrix<double, -1, 1>, Eigen::Matrix<double, -1, -1, 1> > get_first_eigenvalues(const Matrix&, unsigned int, unsigned int, double)\u001b[m\u001b[K’:\n",
-      "\u001b[01m\u001b[K/home/patricio/hdd/metnum-tp2/src/eigen.cpp:29:24:\u001b[m\u001b[K \u001b[01;35m\u001b[Kwarning: \u001b[m\u001b[Kcomparison of integer expressions of different signedness: ‘\u001b[01m\u001b[Kint\u001b[m\u001b[K’ and ‘\u001b[01m\u001b[Kunsigned int\u001b[m\u001b[K’ [\u001b[01;35m\u001b[K-Wsign-compare\u001b[m\u001b[K]\n",
-      "   29 |     for ( int i = 0; \u001b[01;35m\u001b[Ki < num\u001b[m\u001b[K; i++) {\n",
-      "      |                      \u001b[01;35m\u001b[K~~^~~~~\u001b[m\u001b[K\n",
-      "[100%] \u001b[32m\u001b[1mLinking CXX shared module metnum.cpython-38-x86_64-linux-gnu.so\u001b[0m\n",
-      "[100%] Built target metnum\n",
-      "\u001b[36mInstall the project...\u001b[0m\n",
-      "-- Install configuration: \"Release\"\n",
-      "-- Installing: /home/patricio/hdd/metnum-tp2/notebooks/metnum.cpython-38-x86_64-linux-gnu.so\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!cd .. && mkdir build\n",
     "!cd ../build/ && rm -rf *\n",
@@ -107,18 +35,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "/home/patricio/hdd/metnum-tp2/notebooks\n",
-      "Python 3.8.5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Verifico la correcta instalación. Si no falla el import está OK\n",
     "!pwd\n",
@@ -135,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,20 +110,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "((5000, 784), (5000, 1))"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 6
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Uso values para mandar todo a arrays de numpy\n",
     "X = df_train[df_train.columns[1:]].values\n",
@@ -284,17 +192,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Ahora tengo 4000 instancias de entrenamiento y 1000 de validación\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "limit = int(0.8 * X.shape[0]) \n",
     "\n",
@@ -309,23 +209,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#from sklearn.neighbors import KNeighborsClassifier\n",
-    "#from sklearn.decomposition import PCA\n",
+    "pca = metnum.PCA(13)\n",
+    "pca.fit(X_train)\n",
+    "X_train = pca.transform(X_train)\n",
     "\n",
-    "#clf = metnum.KNNClassifier(100)\n",
-    "#clf = KNeighborsClassifier(100)\n",
+    "pca.fit(X_val)\n",
+    "X_val = pca.transform(X_val)\n",
     "\n",
-    "#clf.fit(X_train, y_train)\n",
-    "\n",
-    "clf_metnum = metnum.PCA(13)\n",
-    "#clf_sklearn = PCA(13)\n",
-    "\n",
-    "clf_metnum.fit(X_train)\n",
-    "#clf_sklearn.fit(X_train)\n"
+    "clf_metnum = metnum.KNNClassifier(18)\n",
+    "clf_metnum.fit(X_train, y_train)\n"
    ]
   },
   {
@@ -335,22 +231,17 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "#from sklearn.metrics import accuracy_score\n",
-    "#transform_metnum = clf_metnum.transform(X_val)\n",
-    "transform_sklearn = clf_sklearn.transform(X_val)\n",
-    "print(transform_sklearn)\n",
-    "#acc = accuracy_score(transform_metnum, transform_sklearn)\n",
-    "#print(clf_metnum.debugeameEsta())\n",
-    "#acc = accuracy_score(clf.predict(X_val), y_val)\n",
-    "#print(\"Accuracy: {}\".format(acc))\n"
+    "from sklearn.metrics import accuracy_score\n",
+    "acc = accuracy_score(clf_metnum.predict(X_val), y_val)\n",
+    "print(\"Accuracy: {}\".format(acc))\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "0.914 es el resultado solamente con knn"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ],
  "metadata": {
