--- a/notebooks/knn.ipynb
+++ b/notebooks/knn.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -44,27 +44,27 @@
       "-- Detecting CXX compile features\n",
       "-- Detecting CXX compile features - done\n",
       "Release mode\n",
-      "-- Found PythonInterp: /home/msorondo/anaconda3/bin/python (found version \"3.8.5\") \n",
-      "-- Found PythonLibs: /home/msorondo/anaconda3/lib/libpython3.8.so\n",
+      "-- Found PythonInterp: /home/patricio/hdd/metnum-tp2/tp2/bin/python (found version \"3.8.5\") \n",
+      "-- Found PythonLibs: /usr/lib/x86_64-linux-gnu/libpython3.8.so\n",
       "-- pybind11 v2.2.4\n",
       "-- Performing Test HAS_FLTO\n",
       "-- Performing Test HAS_FLTO - Success\n",
       "-- LTO enabled\n",
-      "CMAKE_INSTALL_PREFIX=/home/msorondo/Desktop/Metodos Numericos/metnum-tp2\n",
+      "CMAKE_INSTALL_PREFIX=/home/patricio/hdd/metnum-tp2\n",
       "-- Configuring done\n",
       "-- Generating done\n",
-      "-- Build files have been written to: /home/msorondo/Desktop/Metodos Numericos/metnum-tp2/build\n",
+      "-- Build files have been written to: /home/patricio/hdd/metnum-tp2/build\n",
       "\u001b[35m\u001b[1mScanning dependencies of target tp2\u001b[0m\n",
       "[ 10%] \u001b[32mBuilding CXX object CMakeFiles/tp2.dir/src/main.cpp.o\u001b[0m\n",
       "[ 20%] \u001b[32mBuilding CXX object CMakeFiles/tp2.dir/src/knn.cpp.o\u001b[0m\n",
       "[ 30%] \u001b[32mBuilding CXX object CMakeFiles/tp2.dir/src/pca.cpp.o\u001b[0m\n",
       "[ 40%] \u001b[32mBuilding CXX object CMakeFiles/tp2.dir/src/eigen.cpp.o\u001b[0m\n",
-      "\u001b[01m\u001b[K/home/msorondo/Desktop/Metodos Numericos/metnum-tp2/src/eigen.cpp:\u001b[m\u001b[K In function ‘\u001b[01m\u001b[Kstd::pair<double, Eigen::Matrix<double, -1, 1> > power_iteration(const Matrix&, unsigned int, double)\u001b[m\u001b[K’:\n",
-      "\u001b[01m\u001b[K/home/msorondo/Desktop/Metodos Numericos/metnum-tp2/src/eigen.cpp:13:23:\u001b[m\u001b[K \u001b[01;35m\u001b[Kwarning: \u001b[m\u001b[Kcomparison of integer expressions of different signedness: ‘\u001b[01m\u001b[Kint\u001b[m\u001b[K’ and ‘\u001b[01m\u001b[Kunsigned int\u001b[m\u001b[K’ [\u001b[01;35m\u001b[K-Wsign-compare\u001b[m\u001b[K]\n",
+      "\u001b[01m\u001b[K/home/patricio/hdd/metnum-tp2/src/eigen.cpp:\u001b[m\u001b[K In function ‘\u001b[01m\u001b[Kstd::pair<double, Eigen::Matrix<double, -1, 1> > power_iteration(const Matrix&, unsigned int, double)\u001b[m\u001b[K’:\n",
+      "\u001b[01m\u001b[K/home/patricio/hdd/metnum-tp2/src/eigen.cpp:13:23:\u001b[m\u001b[K \u001b[01;35m\u001b[Kwarning: \u001b[m\u001b[Kcomparison of integer expressions of different signedness: ‘\u001b[01m\u001b[Kint\u001b[m\u001b[K’ and ‘\u001b[01m\u001b[Kunsigned int\u001b[m\u001b[K’ [\u001b[01;35m\u001b[K-Wsign-compare\u001b[m\u001b[K]\n",
       "   13 |     for (int i = 0; \u001b[01;35m\u001b[Ki < num_iter\u001b[m\u001b[K && !very_close; i++) {\n",
       "      |                     \u001b[01;35m\u001b[K~~^~~~~~~~~~\u001b[m\u001b[K\n",
-      "\u001b[01m\u001b[K/home/msorondo/Desktop/Metodos Numericos/metnum-tp2/src/eigen.cpp:\u001b[m\u001b[K In function ‘\u001b[01m\u001b[Kstd::pair<Eigen::Matrix<double, -1, 1>, Eigen::Matrix<double, -1, -1, 1> > get_first_eigenvalues(const Matrix&, unsigned int, unsigned int, double)\u001b[m\u001b[K’:\n",
-      "\u001b[01m\u001b[K/home/msorondo/Desktop/Metodos Numericos/metnum-tp2/src/eigen.cpp:33:23:\u001b[m\u001b[K \u001b[01;35m\u001b[Kwarning: \u001b[m\u001b[Kcomparison of integer expressions of different signedness: ‘\u001b[01m\u001b[Kint\u001b[m\u001b[K’ and ‘\u001b[01m\u001b[Kunsigned int\u001b[m\u001b[K’ [\u001b[01;35m\u001b[K-Wsign-compare\u001b[m\u001b[K]\n",
+      "\u001b[01m\u001b[K/home/patricio/hdd/metnum-tp2/src/eigen.cpp:\u001b[m\u001b[K In function ‘\u001b[01m\u001b[Kstd::pair<Eigen::Matrix<double, -1, 1>, Eigen::Matrix<double, -1, -1, 1> > get_first_eigenvalues(const Matrix&, unsigned int, unsigned int, double)\u001b[m\u001b[K’:\n",
+      "\u001b[01m\u001b[K/home/patricio/hdd/metnum-tp2/src/eigen.cpp:33:23:\u001b[m\u001b[K \u001b[01;35m\u001b[Kwarning: \u001b[m\u001b[Kcomparison of integer expressions of different signedness: ‘\u001b[01m\u001b[Kint\u001b[m\u001b[K’ and ‘\u001b[01m\u001b[Kunsigned int\u001b[m\u001b[K’ [\u001b[01;35m\u001b[K-Wsign-compare\u001b[m\u001b[K]\n",
       "   33 |     for (int i = 0; \u001b[01;35m\u001b[Ki < num\u001b[m\u001b[K; i++) {\n",
       "      |                     \u001b[01;35m\u001b[K~~^~~~~\u001b[m\u001b[K\n",
       "[ 50%] \u001b[32m\u001b[1mLinking CXX executable tp2\u001b[0m\n",
@@ -74,19 +74,19 @@
       "[ 70%] \u001b[32mBuilding CXX object CMakeFiles/metnum.dir/src/knn.cpp.o\u001b[0m\n",
       "[ 80%] \u001b[32mBuilding CXX object CMakeFiles/metnum.dir/src/pca.cpp.o\u001b[0m\n",
       "[ 90%] \u001b[32mBuilding CXX object CMakeFiles/metnum.dir/src/eigen.cpp.o\u001b[0m\n",
-      "\u001b[01m\u001b[K/home/msorondo/Desktop/Metodos Numericos/metnum-tp2/src/eigen.cpp:\u001b[m\u001b[K In function ‘\u001b[01m\u001b[Kstd::pair<double, Eigen::Matrix<double, -1, 1> > power_iteration(const Matrix&, unsigned int, double)\u001b[m\u001b[K’:\n",
-      "\u001b[01m\u001b[K/home/msorondo/Desktop/Metodos Numericos/metnum-tp2/src/eigen.cpp:13:23:\u001b[m\u001b[K \u001b[01;35m\u001b[Kwarning: \u001b[m\u001b[Kcomparison of integer expressions of different signedness: ‘\u001b[01m\u001b[Kint\u001b[m\u001b[K’ and ‘\u001b[01m\u001b[Kunsigned int\u001b[m\u001b[K’ [\u001b[01;35m\u001b[K-Wsign-compare\u001b[m\u001b[K]\n",
+      "\u001b[01m\u001b[K/home/patricio/hdd/metnum-tp2/src/eigen.cpp:\u001b[m\u001b[K In function ‘\u001b[01m\u001b[Kstd::pair<double, Eigen::Matrix<double, -1, 1> > power_iteration(const Matrix&, unsigned int, double)\u001b[m\u001b[K’:\n",
+      "\u001b[01m\u001b[K/home/patricio/hdd/metnum-tp2/src/eigen.cpp:13:23:\u001b[m\u001b[K \u001b[01;35m\u001b[Kwarning: \u001b[m\u001b[Kcomparison of integer expressions of different signedness: ‘\u001b[01m\u001b[Kint\u001b[m\u001b[K’ and ‘\u001b[01m\u001b[Kunsigned int\u001b[m\u001b[K’ [\u001b[01;35m\u001b[K-Wsign-compare\u001b[m\u001b[K]\n",
       "   13 |     for (int i = 0; \u001b[01;35m\u001b[Ki < num_iter\u001b[m\u001b[K && !very_close; i++) {\n",
       "      |                     \u001b[01;35m\u001b[K~~^~~~~~~~~~\u001b[m\u001b[K\n",
-      "\u001b[01m\u001b[K/home/msorondo/Desktop/Metodos Numericos/metnum-tp2/src/eigen.cpp:\u001b[m\u001b[K In function ‘\u001b[01m\u001b[Kstd::pair<Eigen::Matrix<double, -1, 1>, Eigen::Matrix<double, -1, -1, 1> > get_first_eigenvalues(const Matrix&, unsigned int, unsigned int, double)\u001b[m\u001b[K’:\n",
-      "\u001b[01m\u001b[K/home/msorondo/Desktop/Metodos Numericos/metnum-tp2/src/eigen.cpp:33:23:\u001b[m\u001b[K \u001b[01;35m\u001b[Kwarning: \u001b[m\u001b[Kcomparison of integer expressions of different signedness: ‘\u001b[01m\u001b[Kint\u001b[m\u001b[K’ and ‘\u001b[01m\u001b[Kunsigned int\u001b[m\u001b[K’ [\u001b[01;35m\u001b[K-Wsign-compare\u001b[m\u001b[K]\n",
+      "\u001b[01m\u001b[K/home/patricio/hdd/metnum-tp2/src/eigen.cpp:\u001b[m\u001b[K In function ‘\u001b[01m\u001b[Kstd::pair<Eigen::Matrix<double, -1, 1>, Eigen::Matrix<double, -1, -1, 1> > get_first_eigenvalues(const Matrix&, unsigned int, unsigned int, double)\u001b[m\u001b[K’:\n",
+      "\u001b[01m\u001b[K/home/patricio/hdd/metnum-tp2/src/eigen.cpp:33:23:\u001b[m\u001b[K \u001b[01;35m\u001b[Kwarning: \u001b[m\u001b[Kcomparison of integer expressions of different signedness: ‘\u001b[01m\u001b[Kint\u001b[m\u001b[K’ and ‘\u001b[01m\u001b[Kunsigned int\u001b[m\u001b[K’ [\u001b[01;35m\u001b[K-Wsign-compare\u001b[m\u001b[K]\n",
       "   33 |     for (int i = 0; \u001b[01;35m\u001b[Ki < num\u001b[m\u001b[K; i++) {\n",
       "      |                     \u001b[01;35m\u001b[K~~^~~~~\u001b[m\u001b[K\n",
       "[100%] \u001b[32m\u001b[1mLinking CXX shared module metnum.cpython-38-x86_64-linux-gnu.so\u001b[0m\n",
       "[100%] Built target metnum\n",
       "\u001b[36mInstall the project...\u001b[0m\n",
       "-- Install configuration: \"Release\"\n",
-      "-- Installing: /home/msorondo/Desktop/Metodos Numericos/metnum-tp2/notebooks/metnum.cpython-38-x86_64-linux-gnu.so\n"
+      "-- Installing: /home/patricio/hdd/metnum-tp2/notebooks/metnum.cpython-38-x86_64-linux-gnu.so\n"
      ]
     }
    ],
@@ -108,7 +108,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "/home/msorondo/Desktop/Metodos Numericos/metnum-tp2/notebooks\n",
+      "/home/patricio/hdd/metnum-tp2/notebooks\n",
       "Python 3.8.5\n"
      ]
     }
@@ -131,7 +131,15 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -340,8 +348,8 @@
        "0    0.0988\n",
        "3    0.0960\n",
        "9    0.0956\n",
-       "8    0.0954\n",
        "4    0.0954\n",
+       "8    0.0954\n",
        "5    0.0938\n",
        "Name: label, dtype: float64"
       ]
@@ -402,42 +410,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pca = metnum.PCA(13)\n",
-    "pca.fit(X_train)\n",
-    "X_train = pca.transform(X_train)\n",
-    "\n",
-    "X_val = pca.transform(X_val)\n",
-    "\n",
-    "clf_metnum = metnum.KNNClassifier(18)\n",
-    "clf_metnum.fit(X_train, y_train)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "NameError",
-     "evalue": "name 'clf_metnum' is not defined",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<timed exec>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'clf_metnum' is not defined"
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Alpha: 0. Accuracy: 0.094\n",
+      "Alpha: 1. Accuracy: 0.278\n",
+      "Alpha: 2. Accuracy: 0.462\n",
+      "Alpha: 3. Accuracy: 0.524\n",
+      "Alpha: 4. Accuracy: 0.679\n",
+      "Alpha: 5. Accuracy: 0.729\n",
+      "Alpha: 6. Accuracy: 0.811\n",
+      "Alpha: 7. Accuracy: 0.838\n",
+      "Alpha: 8. Accuracy: 0.855\n",
+      "Alpha: 9. Accuracy: 0.868\n",
+      "Alpha: 10. Accuracy: 0.877\n",
+      "Alpha: 11. Accuracy: 0.898\n",
+      "Alpha: 12. Accuracy: 0.91\n",
+      "Alpha: 13. Accuracy: 0.911\n",
+      "Alpha: 14. Accuracy: 0.914\n",
+      "Alpha: 15. Accuracy: 0.918\n",
+      "Alpha: 16. Accuracy: 0.925\n",
+      "Alpha: 17. Accuracy: 0.925\n",
+      "Alpha: 18. Accuracy: 0.931\n",
+      "Alpha: 19. Accuracy: 0.929\n",
+      "Alpha: 20. Accuracy: 0.931\n"
      ]
     }
    ],
    "source": [
-    "%%time\n",
     "from sklearn.metrics import accuracy_score\n",
-    "acc = accuracy_score(clf_metnum.predict(X_val), y_val)\n",
-    "print(\"Accuracy: {}\".format(acc))\n"
+    "\n",
+    "for i in range(21):\n",
+    "    pca = metnum.PCA(i)\n",
+    "    pca.fit(X_train)\n",
+    "    X_train_PCA = pca.transform(X_train)\n",
+    "\n",
+    "    X_val_PCA = pca.transform(X_val)\n",
+    "\n",
+    "    clf_metnum = metnum.KNNClassifier(18)\n",
+    "    clf_metnum.fit(X_train_PCA, y_train)\n",
+    "    acc = accuracy_score(clf_metnum.predict(X_val_PCA), y_val)\n",
+    "    print(\"Alpha: {}. Accuracy: {}\".format(i, acc))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Alpha: 2.Accuracy: 69\nCPU times: user 289 µs, sys: 21 µs, total: 310 µs\nWall time: 209 µs\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n"
    ]
   },
   {
@@ -465,6 +499,16 @@
      "text": [
       "Esto es para ver que las matrices generadas son distintas(tiene que dar false):  False\nTrue\n"
      ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 53
     }
    ],
    "source": [
