--- a/scripts/mejorAlfa.ipynb
+++ b/scripts/mejorAlfa.ipynb
@@ -14,12 +14,12 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.5 64-bit ('base': conda)",
-   "metadata": {
-    "interpreter": {
-     "hash": "b7a72e0aecaf8ba1a38e5a558578c66160445e8a4907431cad47c18ab66b8d64"
-    }
+   "name": "python385jvsc74a57bd0718222cd83a5fdc412f1a164e70c6c5f8256269bbf19ceb4b2f4f3335bd2091e",
+   "display_name": "Python 3.8.5 64-bit ('base': conda)"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "718222cd83a5fdc412f1a164e70c6c5f8256269bbf19ceb4b2f4f3335bd2091e"
    }
   }
  },
@@ -53,18 +53,12 @@
     }
    ],
    "source": [
-    "!cd .. && mkdir build\n",
-    "!cd build/ && rm -rf *\n",
-    "!cd ../build/ && cmake \\\n",
-    "  -DPYTHON_EXECUTABLE=\"$(which python)\" \\\n",
-    "  -DCMAKE_BUILD_TYPE=Release ..\n",
-    "!cd ../build && make install\n",
-    "!cp metnum.cpython-* ../scripts"
+    "!sh build.sh"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,28 +66,47 @@
     "import pandas as pd\n",
     "import numpy as np \n",
     "from sklearn.metrics import accuracy_score\n",
-    "import time"
+    "from sklearn.datasets import fetch_openml\n",
+    "import time\n",
+    "from pathlib import Path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'fetch_openml' is not defined",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-0fd103077106>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfetch_openml\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'mnist_784'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mversion\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreturn_X_y\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mindxs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchoice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10000\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreplace\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'fetch_openml' is not defined"
+     ]
+    }
+   ],
    "source": [
+    "X, y = fetch_openml('mnist_784', version=1, return_X_y=True)\n",
+    "y = y.astype(int)\n",
+    "X = X.astype(int)\n",
     "\n",
-    "df_train = pd.read_csv(\"../data/train.csv\")\n",
-    "\n",
-    "df_train = df_train.iloc[0:10000,:]\n",
-    "\n",
-    "X = df_train[df_train.columns[1:]].values\n",
-    "y = df_train[\"label\"].values.reshape(-1, 1)\n",
-    "\n",
+    "indxs = np.random.choice(len(y), 10000, replace=False)\n",
+    "new_y = [ y[idx] for idx in indxs ]\n",
+    "new_X = [ X[idx] for idx in indxs ]\n",
+    "X, y = np.array(new_X), np.array(new_y)\n",
     "\n",
     "limit = int(0.8 * X.shape[0]) \n",
     "\n",
     "X_train, y_train = X[:limit], y[:limit]\n",
-    "X_val, y_val = X[limit:], y[limit:]"
+    "X_val, y_val = X[limit:], y[limit:]\n",
+    "\n",
+    "assert len(X_train) == len(y_train)\n",
+    "assert len(X_val) == len(y_val)\n",
+    "\n",
+    "print(f\"Ahora tengo {len(X_train)} instancias de entrenamiento y {len(X_val)} de validación\")"
    ]
   },
   {
@@ -159,12 +172,6 @@
     }
    ],
    "source": [
-    "\n",
-    "assert len(X_train) == len(y_train)\n",
-    "assert len(X_val) == len(y_val)\n",
-    "\n",
-    "print(f\"Ahora tengo {len(X_train)} instancias de entrenamiento y {len(X_val)} de validación\")\n",
-    "\n",
     "accuracy_con_pca = []\n",
     "performance = []\n",
     "for i in range(1,50):\n",
@@ -182,18 +189,16 @@
     "    time_performance = end - start\n",
     "    accuracy_con_pca.append(acc)\n",
     "    performance.append(time_performance)\n",
-    "    print(\"Alpha: {}. Accuracy: {}. Duration: {}\".format(i, acc, time_performance))\n",
     "\n",
-    "#for i in range(1,50,3):\n",
-    " #   start = time.process_time()\n",
+    "myfile = Path('best_alpha/acc.npy')\n",
+    "myfile.touch(exist_ok=True)\n",
+    "with open('best_alpha/acc.npy', 'wb') as f:\n",
+    "    np.save(f, accuracy_con_pca)\n",
     "\n",
-    "  #  clf_metnum = metnum.KNNClassifier(i)\n",
-    "  #  clf_metnum.fit(X_train, y_train)\n",
-    "  #  acc = accuracy_score(clf_metnum.predict(X_val), y_val)\n",
-    "   # end = time.process_time()\n",
-    "   # time_performance = end - start\n",
-    "   # accuracy_sin_pca.append(acc)\n",
-    "   # print(\"Alpha: {}. Accuracy: {}. Duration: {}\".format(i, acc, time_performance))"
+    "myfile = Path('best_alpha/performance.npy')\n",
+    "myfile.touch(exist_ok=True)\n",
+    "with open('best_alpha/performance.npy', 'wb') as f:\n",
+    "    np.save(f, performance)"
    ]
   },
   {
