--- a/experimentacion/best_knn.ipynb
+++ b/experimentacion/best_knn.ipynb
@@ -53,19 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X, y = fetch_openml('mnist_784', version=1, return_X_y=True)\n",
-    "y = y.astype(int)[:10000]\n",
-    "X = X.astype(int)[:10000]\n",
-    "\n",
-    "limit = int(0.8 * X.shape[0]) \n",
-    "\n",
-    "X_train, y_train = X[:limit], y[:limit]\n",
-    "X_val, y_val = X[limit:], y[limit:]\n",
-    "\n",
-    "assert len(X_train) == len(y_train)\n",
-    "assert len(X_val) == len(y_val)\n",
-    "\n",
-    "print(f\"Ahora tengo {len(X_train)} instancias de entrenamiento y {len(X_val)} de validación\")"
+    "X_train, y_train, X_val, y_val = get_MNIST(items=10000)"
    ]
   },
   {
@@ -150,7 +138,6 @@
     "plt.rc('legend', fontsize=10)    # legend fontsize\n",
     "plt.rc('figure', titlesize=10)  # fontsize of the figure title\n",
     "\n",
-    "#data = np.load('../best_k_knn/acc_by_k.npy')[1:]\n",
     "plt.plot(range(1, rango_k), accuracies[1:], '-o')\n",
     "plt.xlabel('K', fontsize=20)\n",
     "plt.ylabel('Accuracy', fontsize=20)\n",
