--- a/experimentacion/accuracy_knn_by_dataset_size.ipynb
+++ b/experimentacion/accuracy_knn_by_dataset_size.ipynb
@@ -38,6 +38,13 @@
    ]
   },
   {
+   "source": [
+    "Importamos dependencias"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
@@ -55,6 +62,13 @@
    ]
   },
   {
+   "source": [
+    "Obtenemos los X e y de MNIST, shuffleados con 70000 elementos."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -62,6 +76,13 @@
    "source": [
     "X_all, y_all = get_MNIST_XY(0.8, 70000)"
    ]
+  },
+  {
+   "source": [
+    "Seteamos los tamanios de dataset a probar"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -172,6 +193,13 @@
    "source": [
     "durations"
    ]
+  },
+  {
+   "source": [
+    "Generamos graficos mostrando el cambio en del accuracy y performance mientras aumenta el tamanio del dataset"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
