--- a/experimentacion/best_alpha.ipynb
+++ b/experimentacion/best_alpha.ipynb
@@ -3413,6 +3413,35 @@
     "ax1.set_ylabel('Accuracy')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start = time.process_time()\n",
+    "clf_noPCA = metnum.KNNClassifier(3)\n",
+    "clf_noPCA.fit(X_train,y_train)\n",
+    "res = clf_noPCA.predict(X_val)\n",
+    "\n",
+    "end = time.process_time()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "performance = pd.Series(performance)\n",
+    "noPCA_performance = end-start\n",
+    "plt.figure()\n",
+    "plt.xlabel(\"alfa\")\n",
+    "plt.ylabel(\"Duration (no PCA) / Duration (sin PCA)\")\n",
+    "plt.plot(range(1,50,1),abs(noPCA_performance / performance * 100))\n",
+    "plt.show("
+   ]
   }
  ],
  "metadata": {
