notebook better knn version final

--- a/experimentacion/better_knn.ipynb
+++ b/experimentacion/better_knn.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "decb5de0",
    "metadata": {},
    "outputs": [
@@ -48,10 +48,6 @@
       "[  8%] \u001b[32mBuilding CXX object CMakeFiles/tp2.dir/src/main.cpp.o\u001b[0m\n",
       "[ 16%] \u001b[32mBuilding CXX object CMakeFiles/tp2.dir/src/knn.cpp.o\u001b[0m\n",
       "[ 25%] \u001b[32mBuilding CXX object CMakeFiles/tp2.dir/src/better_knn.cpp.o\u001b[0m\n",
-      "\u001b[01m\u001b[K/home/patricio/hdd/metnum-tp2/src/better_knn.cpp:\u001b[m\u001b[K In member function ‘\u001b[01m\u001b[Kvirtual int BetterKNNClassifier::_knn(Vector)\u001b[m\u001b[K’:\n",
-      "\u001b[01m\u001b[K/home/patricio/hdd/metnum-tp2/src/better_knn.cpp:23:12:\u001b[m\u001b[K \u001b[01;35m\u001b[Kwarning: \u001b[m\u001b[Kvariable ‘\u001b[01m\u001b[Kmoda\u001b[m\u001b[K’ set but not used [\u001b[01;35m\u001b[K-Wunused-but-set-variable\u001b[m\u001b[K]\n",
-      "   23 |     double \u001b[01;35m\u001b[Kmoda\u001b[m\u001b[K = 0;\n",
-      "      |            \u001b[01;35m\u001b[K^~~~\u001b[m\u001b[K\n",
       "[ 33%] \u001b[32mBuilding CXX object CMakeFiles/tp2.dir/src/pca.cpp.o\u001b[0m\n",
       "[ 41%] \u001b[32mBuilding CXX object CMakeFiles/tp2.dir/src/eigen.cpp.o\u001b[0m\n",
       "\u001b[01m\u001b[K/home/patricio/hdd/metnum-tp2/src/eigen.cpp:\u001b[m\u001b[K In function ‘\u001b[01m\u001b[Kstd::pair<double, Eigen::Matrix<double, -1, 1> > power_iteration(const Matrix&, unsigned int, double)\u001b[m\u001b[K’:\n",
@@ -68,10 +64,6 @@
       "[ 58%] \u001b[32mBuilding CXX object CMakeFiles/metnum.dir/src/metnum.cpp.o\u001b[0m\n",
       "[ 66%] \u001b[32mBuilding CXX object CMakeFiles/metnum.dir/src/knn.cpp.o\u001b[0m\n",
       "[ 75%] \u001b[32mBuilding CXX object CMakeFiles/metnum.dir/src/better_knn.cpp.o\u001b[0m\n",
-      "\u001b[01m\u001b[K/home/patricio/hdd/metnum-tp2/src/better_knn.cpp:\u001b[m\u001b[K In member function ‘\u001b[01m\u001b[Kvirtual int BetterKNNClassifier::_knn(Vector)\u001b[m\u001b[K’:\n",
-      "\u001b[01m\u001b[K/home/patricio/hdd/metnum-tp2/src/better_knn.cpp:23:12:\u001b[m\u001b[K \u001b[01;35m\u001b[Kwarning: \u001b[m\u001b[Kvariable ‘\u001b[01m\u001b[Kmoda\u001b[m\u001b[K’ set but not used [\u001b[01;35m\u001b[K-Wunused-but-set-variable\u001b[m\u001b[K]\n",
-      "   23 |     double \u001b[01;35m\u001b[Kmoda\u001b[m\u001b[K = 0;\n",
-      "      |            \u001b[01;35m\u001b[K^~~~\u001b[m\u001b[K\n",
       "[ 83%] \u001b[32mBuilding CXX object CMakeFiles/metnum.dir/src/pca.cpp.o\u001b[0m\n",
       "[ 91%] \u001b[32mBuilding CXX object CMakeFiles/metnum.dir/src/eigen.cpp.o\u001b[0m\n",
       "\u001b[01m\u001b[K/home/patricio/hdd/metnum-tp2/src/eigen.cpp:\u001b[m\u001b[K In function ‘\u001b[01m\u001b[Kstd::pair<double, Eigen::Matrix<double, -1, 1> > power_iteration(const Matrix&, unsigned int, double)\u001b[m\u001b[K’:\n",
@@ -104,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "939f69df",
    "metadata": {},
    "outputs": [],
@@ -114,28 +106,20 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.metrics import accuracy_score\n",
-    "from sklearn.model_selection import train_test_split\n"
+    "from sklearn.model_selection import train_test_split\n",
+    "import metnum"
    ]
   },
   {
    "source": [
-    "Obtenemos el dataset de MNIST que contiene 70000 imagenes, partido en 4/5 de entrenamiento y 1/5 de validacion. El mismo esta shuffleado sobre si mismo."
+    "Obtenemos el dataset de train.csv"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import metnum"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "83b62ff6",
    "metadata": {},
    "outputs": [
@@ -152,7 +136,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Ahora tengo 8000 instancias de entrenamiento y 2000 de validación\n"
+      "Ahora tengo 33600 instancias de entrenamiento y 8400 de validación\n"
      ]
     }
    ],
@@ -172,38 +156,40 @@
    "id": "a0f60047",
    "metadata": {},
    "source": [
-    "Ahora buscamos tenemos como objetivo buscar el mejor par de alpha (PCA) y k (kNN). Para esto tomamos los mejores alphas que encontramos en relación a su accuracy y performance y para cada ejecutamos el algoritmo con distintos valores de k"
+    "Calculamos las accuracies de kNN y kNN mejorado para k de 1 a 40"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "8d8ac935",
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "accuracy normal: 0.956\naccuracy mejorada: 0.956\n"
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'metnum' is not defined",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-f4a1efe66777>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m41\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mbetter_knn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmetnum\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mBetterKNNClassifier\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0mbetter_knn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mbetter_prediction\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbetter_knn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_val\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mbetter_acc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0maccuracy_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbetter_prediction\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_val\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'metnum' is not defined"
      ]
     }
    ],
    "source": [
-    "better_knn = metnum.BetterKNNClassifier(3)\n",
-    "better_knn.fit(X_train, y_train)\n",
-    "better_prediction = better_knn.predict(X_val)\n",
-    "better_acc = accuracy_score(better_prediction, y_val)\n",
+    "accuracies = []\n",
+    "better_accuracies = []\n",
+    "for i in range(1, 41):\n",
+    "    better_knn = metnum.BetterKNNClassifier(i)\n",
+    "    better_knn.fit(X_train, y_train)\n",
+    "    better_prediction = better_knn.predict(X_val)\n",
+    "    better_accuracies.append(accuracy_score(better_prediction, y_val))\n",
     "\n",
-    "knn = metnum.KNNClassifier(3)\n",
-    "knn.fit(X_train, y_train)\n",
-    "prediction = knn.predict(X_val)\n",
-    "acc = accuracy_score(prediction, y_val)\n",
-    "\n",
-    "\n",
-    "print(f'accuracy normal: {acc}')\n",
-    "print(f'accuracy mejorada: {better_acc}')\n",
-    "print(better_acc - acc)"
+    "    knn = metnum.KNNClassifier(i)\n",
+    "    knn.fit(X_train, y_train)\n",
+    "    prediction = knn.predict(X_val)\n",
+    "    accuracies.append(accuracy_score(prediction, y_val))\n"
    ]
   },
   {
@@ -211,7 +197,33 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "accuracies_np = np.array(accuracies)\n",
+    "better_accuracies_np = np.array(better_accuracies)\n",
+    "np.save('acc_knn_40.npy', accuracies_np)\n",
+    "np.save('acc_better_knn_40.npy', better_accuracies_np)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.rc('font', size=10)\n",
+    "plt.rc('axes', titlesize=10)\n",
+    "plt.rc('axes', labelsize=10)\n",
+    "plt.rc('xtick', labelsize=10)\n",
+    "plt.rc('ytick', labelsize=10)\n",
+    "plt.rc('legend', fontsize=10)\n",
+    "plt.rc('figure', titlesize=10)\n",
+    "\n",
+    "plt.plot(range(1, 41), better_accuracies_np - accuracies_np, '-o')\n",
+    "plt.xlabel('k', fontsize=20)\n",
+    "plt.ylabel('Accuracy', fontsize=20)\n",
+    "plt.title('Accuracy de kNN, k=1,...,130 con K-Fold Cross Validation, K=5', fontsize=20)\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
