--- a/experimentacion/otras_metricas.ipynb
+++ b/experimentacion/otras_metricas.ipynb
@@ -9,77 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "mkdir: cannot create directory ‘build’: File exists\n",
-      "-- The C compiler identification is GNU 9.3.0\n",
-      "-- The CXX compiler identification is GNU 9.3.0\n",
-      "-- Check for working C compiler: /usr/bin/cc\n",
-      "-- Check for working C compiler: /usr/bin/cc -- works\n",
-      "-- Detecting C compiler ABI info\n",
-      "-- Detecting C compiler ABI info - done\n",
-      "-- Detecting C compile features\n",
-      "-- Detecting C compile features - done\n",
-      "-- Check for working CXX compiler: /usr/bin/c++\n",
-      "-- Check for working CXX compiler: /usr/bin/c++ -- works\n",
-      "-- Detecting CXX compiler ABI info\n",
-      "-- Detecting CXX compiler ABI info - done\n",
-      "-- Detecting CXX compile features\n",
-      "-- Detecting CXX compile features - done\n",
-      "Release mode\n",
-      "-- Found PythonInterp: /home/msorondo/anaconda3/bin/python (found version \"3.8.5\") \n",
-      "-- Found PythonLibs: /home/msorondo/anaconda3/lib/libpython3.8.so\n",
-      "-- pybind11 v2.2.4\n",
-      "-- Performing Test HAS_FLTO\n",
-      "-- Performing Test HAS_FLTO - Success\n",
-      "-- LTO enabled\n",
-      "CMAKE_INSTALL_PREFIX=/home/msorondo/Desktop/Metodos Numericos/metnum-tp2\n",
-      "-- Configuring done\n",
-      "-- Generating done\n",
-      "-- Build files have been written to: /home/msorondo/Desktop/Metodos Numericos/metnum-tp2/build\n",
-      "\u001b[35m\u001b[1mScanning dependencies of target tp2\u001b[0m\n",
-      "[  8%] \u001b[32mBuilding CXX object CMakeFiles/tp2.dir/src/main.cpp.o\u001b[0m\n",
-      "[ 16%] \u001b[32mBuilding CXX object CMakeFiles/tp2.dir/src/knn.cpp.o\u001b[0m\n",
-      "[ 25%] \u001b[32mBuilding CXX object CMakeFiles/tp2.dir/src/better_knn.cpp.o\u001b[0m\n",
-      "[ 33%] \u001b[32mBuilding CXX object CMakeFiles/tp2.dir/src/pca.cpp.o\u001b[0m\n",
-      "[ 41%] \u001b[32mBuilding CXX object CMakeFiles/tp2.dir/src/eigen.cpp.o\u001b[0m\n",
-      "\u001b[01m\u001b[K/home/msorondo/Desktop/Metodos Numericos/metnum-tp2/src/eigen.cpp:\u001b[m\u001b[K In function ‘\u001b[01m\u001b[Kstd::pair<double, Eigen::Matrix<double, -1, 1> > power_iteration(const Matrix&, unsigned int, double)\u001b[m\u001b[K’:\n",
-      "\u001b[01m\u001b[K/home/msorondo/Desktop/Metodos Numericos/metnum-tp2/src/eigen.cpp:13:23:\u001b[m\u001b[K \u001b[01;35m\u001b[Kwarning: \u001b[m\u001b[Kcomparison of integer expressions of different signedness: ‘\u001b[01m\u001b[Kint\u001b[m\u001b[K’ and ‘\u001b[01m\u001b[Kunsigned int\u001b[m\u001b[K’ [\u001b[01;35m\u001b[K-Wsign-compare\u001b[m\u001b[K]\n",
-      "   13 |     for (int i = 0; \u001b[01;35m\u001b[Ki < num_iter\u001b[m\u001b[K && !very_close; i++) {\n",
-      "      |                     \u001b[01;35m\u001b[K~~^~~~~~~~~~\u001b[m\u001b[K\n",
-      "\u001b[01m\u001b[K/home/msorondo/Desktop/Metodos Numericos/metnum-tp2/src/eigen.cpp:\u001b[m\u001b[K In function ‘\u001b[01m\u001b[Kstd::pair<Eigen::Matrix<double, -1, 1>, Eigen::Matrix<double, -1, -1, 1> > get_first_eigenvalues(const Matrix&, unsigned int, unsigned int, double)\u001b[m\u001b[K’:\n",
-      "\u001b[01m\u001b[K/home/msorondo/Desktop/Metodos Numericos/metnum-tp2/src/eigen.cpp:33:23:\u001b[m\u001b[K \u001b[01;35m\u001b[Kwarning: \u001b[m\u001b[Kcomparison of integer expressions of different signedness: ‘\u001b[01m\u001b[Kint\u001b[m\u001b[K’ and ‘\u001b[01m\u001b[Kunsigned int\u001b[m\u001b[K’ [\u001b[01;35m\u001b[K-Wsign-compare\u001b[m\u001b[K]\n",
-      "   33 |     for (int i = 0; \u001b[01;35m\u001b[Ki < num\u001b[m\u001b[K; i++) {\n",
-      "      |                     \u001b[01;35m\u001b[K~~^~~~~\u001b[m\u001b[K\n",
-      "[ 50%] \u001b[32m\u001b[1mLinking CXX executable tp2\u001b[0m\n",
-      "[ 50%] Built target tp2\n",
-      "\u001b[35m\u001b[1mScanning dependencies of target metnum\u001b[0m\n",
-      "[ 58%] \u001b[32mBuilding CXX object CMakeFiles/metnum.dir/src/metnum.cpp.o\u001b[0m\n",
-      "[ 66%] \u001b[32mBuilding CXX object CMakeFiles/metnum.dir/src/knn.cpp.o\u001b[0m\n",
-      "[ 75%] \u001b[32mBuilding CXX object CMakeFiles/metnum.dir/src/better_knn.cpp.o\u001b[0m\n",
-      "[ 83%] \u001b[32mBuilding CXX object CMakeFiles/metnum.dir/src/pca.cpp.o\u001b[0m\n",
-      "[ 91%] \u001b[32mBuilding CXX object CMakeFiles/metnum.dir/src/eigen.cpp.o\u001b[0m\n",
-      "\u001b[01m\u001b[K/home/msorondo/Desktop/Metodos Numericos/metnum-tp2/src/eigen.cpp:\u001b[m\u001b[K In function ‘\u001b[01m\u001b[Kstd::pair<double, Eigen::Matrix<double, -1, 1> > power_iteration(const Matrix&, unsigned int, double)\u001b[m\u001b[K’:\n",
-      "\u001b[01m\u001b[K/home/msorondo/Desktop/Metodos Numericos/metnum-tp2/src/eigen.cpp:13:23:\u001b[m\u001b[K \u001b[01;35m\u001b[Kwarning: \u001b[m\u001b[Kcomparison of integer expressions of different signedness: ‘\u001b[01m\u001b[Kint\u001b[m\u001b[K’ and ‘\u001b[01m\u001b[Kunsigned int\u001b[m\u001b[K’ [\u001b[01;35m\u001b[K-Wsign-compare\u001b[m\u001b[K]\n",
-      "   13 |     for (int i = 0; \u001b[01;35m\u001b[Ki < num_iter\u001b[m\u001b[K && !very_close; i++) {\n",
-      "      |                     \u001b[01;35m\u001b[K~~^~~~~~~~~~\u001b[m\u001b[K\n",
-      "\u001b[01m\u001b[K/home/msorondo/Desktop/Metodos Numericos/metnum-tp2/src/eigen.cpp:\u001b[m\u001b[K In function ‘\u001b[01m\u001b[Kstd::pair<Eigen::Matrix<double, -1, 1>, Eigen::Matrix<double, -1, -1, 1> > get_first_eigenvalues(const Matrix&, unsigned int, unsigned int, double)\u001b[m\u001b[K’:\n",
-      "\u001b[01m\u001b[K/home/msorondo/Desktop/Metodos Numericos/metnum-tp2/src/eigen.cpp:33:23:\u001b[m\u001b[K \u001b[01;35m\u001b[Kwarning: \u001b[m\u001b[Kcomparison of integer expressions of different signedness: ‘\u001b[01m\u001b[Kint\u001b[m\u001b[K’ and ‘\u001b[01m\u001b[Kunsigned int\u001b[m\u001b[K’ [\u001b[01;35m\u001b[K-Wsign-compare\u001b[m\u001b[K]\n",
-      "   33 |     for (int i = 0; \u001b[01;35m\u001b[Ki < num\u001b[m\u001b[K; i++) {\n",
-      "      |                     \u001b[01;35m\u001b[K~~^~~~~\u001b[m\u001b[K\n",
-      "[100%] \u001b[32m\u001b[1mLinking CXX shared module metnum.cpython-38-x86_64-linux-gnu.so\u001b[0m\n",
-      "[100%] Built target metnum\n",
-      "\u001b[36mInstall the project...\u001b[0m\n",
-      "-- Install configuration: \"Release\"\n",
-      "-- Installing: /home/msorondo/Desktop/Metodos Numericos/metnum-tp2/notebooks/metnum.cpython-38-x86_64-linux-gnu.so\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!sh build.sh"
    ]
@@ -126,19 +58,7 @@
     }
    ],
    "source": [
-    "#X_train, y_train, X_val, y_val = get_MNIST(0.8)\n",
-    "\n",
-    "X, y = fetch_openml('mnist_784', version=1, return_X_y=True)\n",
-    "y = y.astype(int)\n",
-    "X = X.astype(int)\n",
-    "\n",
-    "limit = int(0.8 * X.shape[0]) \n",
-    "\n",
-    "X_train, y_train = X[:limit], y[:limit]\n",
-    "X_val, y_val = X[limit:], y[limit:]\n",
-    "\n",
-    "assert len(X_train) == len(y_train)\n",
-    "assert len(X_val) == len(y_val)\n",
+    "X_train, y_train, X_val, y_val = get_MNIST(0.8)\n",
     "\n",
     "print(f\"Ahora tengo {len(X_train)} instancias de entrenamiento y {len(X_val)} de validación\")"
    ]
@@ -733,31 +653,6 @@
     "import dataframe_image as dfi\n",
     "dfi.export(result,\"../scripts/imagenes/recalls-presiciones.jpg\")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 51
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
